# CDE

./: CMakeLists.txt  README.md
app-compiler/: CMakeLists.txt  README.md
app-compiler/llvm-pass/include/: llvm_cdfg.h
app-compiler/llvm-pass/src/: CDFGPass.cpp  llvm_cdfg.cpp
applications/: rules.mk
applications/arf/: config.bit  mapped_adg.dot  mapped_dfg.dot  mapped_dfgio.txt
applications/array_add/: affine.dot  affine.json  array_add.c
cgra-modeling/: README.md  build.sbt
cgra-modeling/src/main/scala/console/: console.scala
cgra-modeling/src/main/scala/dsa/interconnect/: Interconnect.scala
cgra-modeling/src/main/scala/dsa/io/: IOB.scala
cgra-modeling/src/main/scala/dsa/pe/: PE.scala
cgra-modeling/src/main/scala/dsa/template/: CGRA.scala
cgra-modeling/src/main/scala/ir/: IR.scala  IRHandler.scala
cgra-modeling/src/main/scala/ppa/: area_par.scala  estimator.scala
cgra-modeling/src/main/scala/spec/: CGRASpec.scala
include/adg/: adg_node.h
include/generator/: generator.h
include/ir/: adg_ir.h
include/mapper/: configuration.h  mapper.h  mapping.h
include/ui/: BirdWidget.h  CDE.h  GraphicItem.h  NetWidget.h  Netlist.h  SubArchWidget.h  ViewWidget.h
resources/: dse12.cpf  mapping.cpf
resources/ADGs/: cgra_adg.json  test11.json
src/adg/: adg_node.cpp
src/generator/: generator.cpp
src/ir/: adg_ir.cpp  dfg_ir.cpp
src/mapper/: configuration.cpp  mapper.cpp  mapper_sa.cpp  mapping.cpp  visualize.cpp
src/ui/: BirdWidget.cpp  CDE.cpp  CDE.qrc  GraphicItem.cpp  NetWidget.cpp  Netlist.cpp  SubArchWidget.cpp  ViewWidget.cpp  main.cpp
